# lab2

josephus_problem-skulweq/: CMakeLists.txt  readme.md
josephus_problem-skulweq/.gitverse/workflows/: .cloud-runner-demo.yaml  smartclass.yml
josephus_problem-skulweq/include/: library.hpp
josephus_problem-skulweq/src/: library.cpp
josephus_problem-skulweq/tests/: test_basic.cpp
path_delivery-skulweq/: .gitignore  CMakeLists.txt  readme.md
path_delivery-skulweq/.gitverse/workflows/: smartclass.yml
path_delivery-skulweq/include/: graph.hpp
path_delivery-skulweq/src/: library.cpp
path_delivery-skulweq/tests/: test_basic.cpp
